tests/baselines/reference/exportEqualMemberMissing(strict=true).errors.txt
exportEqualMemberMissing_0.ts(3,10): error TS7006: Parameter 'res' implicitly has an 'any' type.
exportEqualMemberMissing_0.ts(3,15): error TS7006: Parameter 'req' implicitly has an 'any' type.
exportEqualMemberMissing_0.ts(3,20): error TS7006: Parameter 'next' implicitly has an 'any' type.
exportEqualMemberMissing_0.ts(13,10): error TS2454: Variable 'server' is used before being assigned.
exportEqualMemberMissing_1.ts(3,23): error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.


==== exportEqualMemberMissing_1.ts (1 errors) ====
    ///<reference path='exportEqualMemberMissing_0.ts'/>
    import connect = require('./exportEqualMemberMissing_0');
    connect().use(connect.static('foo')); // Error	1	The property 'static' does not exist on value of type ''.
                          ~~~~~~
!!! error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.
    
==== exportEqualMemberMissing_0.ts (4 errors) ====
    module server {
        export interface connectModule {
            (res, req, next): void;
             ~~~
!!! error TS7006: Parameter 'res' implicitly has an 'any' type.
                  ~~~
!!! error TS7006: Parameter 'req' implicitly has an 'any' type.
                       ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
        }
    }
    var server: {
        (): server.connectExport;
        foo: Date;
    };
    export = server;
             ~~~~~~
!!! error TS2454: Variable 'server' is used before being assigned.
    